# combss

./: LICENSE  LICENSE.txt  README.md  pyproject.toml  requirements.txt  token.txt
combss/: README.md  __init__.py  _metrics.py  _multinomial_grad.py  _opt_glm.py  _opt_lm.py  cv.py  linear.py  logistic.py  metrics.py  multinomial.py  opt_lm.py  optimisation.py
combss/LinearRegression/: prediction_helper.py
combss/linear/: combss_sd_I.py  data_gen.py  helpers.py  lambda_grid_gen.py  loss_grid-lam-0.csv  loss_grid-lam-2.csv  metric.py  optimize.py  prediction_helper.py  prediction_main.py  thesis-plots.py  variant0.py  variant1.py  variant2.py  variant2a.py  variant2b.py  variant3.py  variant4.py  variant5.py  variant6.py  variantNormalisedImproved.py  variantimproved.py  variantnormalised.py
combss/linear/tests/: AdamMetric.py  COMBSS-Map-case-1-n-100-p-1000-q-100-corr-0.8-ninit-1-snr-4-ndatasets-1-nlam-100-eta-0.001.csv  COMBSS-Map-case-1-n-100-p-20-q-20-corr-0.8-ninit-1-snr-4-ndatasets-50-nlam-25-eta-0.001.csv  COMBSS-Original-case-1-n-100-p-1000-q-20-corr-0.8-ninit-1-snr-4-ndatasets-50-nlam-25-eta-0.001.csv  COMBSS-Original-case-1-n-100-p-20-q-20-corr-0.8-ninit-1-snr-4-ndatasets-50-nlam-25-eta-0.001.csv  COMBSS-case-1-n-100-p-1000-q-100-corr-0.8-ninit-1-snr-4-ndatasets-1-nlam-100-eta-0.001.csv  COMBSS-case-1-n-100-p-20-q-20-corr-0.8-ninit-1-snr-1-ndatasets-1-nlam-100-eta-0.001.csv  COMBSS-case-2-n-100-p-20-q-20-corr-0.8-ninit-1-snr-1-ndatasets-1-nlam-100-eta-0.001.csv  COMBSSV0-case-1-n-100-p-1000-q-20-corr-0.8-ninit-1-snr-4-ndatasets-1-nlam-100-eta-0.001.csv  COMBSSV0-case-2-n-100-p-1000-q-20-corr-0.8-ninit-1-snr-4-ndatasets-1-nlam-100-eta-0.001.csv  COMBSSV1-case-1-n-100-p-1000-q-20-corr-0.8-ninit-1-snr-4-ndatasets-1-nlam-100-eta-0.001.csv  COMBSSV1-case-2-n-100-p-1000-q-20-corr-0.8-ninit-1-snr-4-ndatasets-1-nlam-100-eta-0.001.csv  COMBSSV1-case-2-n-100-p-1000-q-20-corr-0.8-ninit-1-snr-4-ndatasets-1-nlam-25-eta-0.001.csv  COMBSSV2-case-1-n-100-p-20-q-100-corr-0.8-ninit-1-snr-4-ndatasets-1-nlam-100-eta-0.001.csv  HeuristicTest.py  adam.py  analysis.py  bcd.py  bcdAssess.py  bcdsim.py  blockTest.py  bulk_interpret_c1.py  bulk_interpret_c1_minisim.py  bulk_interpret_c2.py  bulk_master.py  bulk_sim.py  coordinateTest.py  cyclic.py  delta-n.py  graphSplit-1.py  graphSplit-2.py  graph_Coord.py  graph_V2.py  interpretMap.py  minorSim.py  (+42 more)
combss/linear_improve/: data_gen.py  helpers.py  metric.py  running.py
docs/: algorithm.rst  api.rst  changelog.rst  conf.py  index.rst  quickstart.rst  requirements.txt
tests/: n-100-p20SNR-3Replica20.csv  setup.py
(+546 files in other folders)
