[tool.poetry]
name = "combss"
version = "1.0.0"
description = "A package implementation of COMBSS, a novel continuous optimisation method toward best subset selection"
authors = ["Sarat Moka", "Hua Yang Hu"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/saratmoka/combss"
keywords = ["mathematics", "optimization", "subset selection"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.21.0"
scipy = "^1.7.0"
scikit-learn = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.classifiers]
"License :: OSI Approved :: Apache Software License"
"Programming Language :: Python :: 3"
"Operating System :: OS Independent"
"Topic :: Scientific/Engineering :: Mathematics"