[build-system]
requires = ["flit_core>=3.4"]
build-backend = "flit_core.buildapi"

[project]
name = "combss"
version = "1.0.1"
description = "A package implementation of COMBSS, a novel continuous optimisation method toward best subset selection"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    { name = "Sarat Moka" },
    { name = "Hua Yang Hu" }
]
Homepage = "https://github.com/saratmoka/combss"
keywords = ["mathematics", "optimization", "subset selection"]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Mathematics"
]

dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "scikit-learn>=1.0.0"
]