[build-system]
requires = ["flit_core>=3.4"]
build-backend = "flit_core.buildapi"

[project]
name = "combss"
version = "2.0.0"
description = "COMBSS: continuous optimisation for best subset selection in generalised linear models (linear, logistic, multinomial)"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    { name = "Sarat Moka" },
    { name = "Anant Mathur" },
    { name = "Hua Yang Hu" }
]
Homepage = "https://github.com/saratmoka/combss"
keywords = ["mathematics", "optimization", "subset selection", "logistic regression", "multinomial", "GLM"]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Mathematics"
]

dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "scikit-learn>=1.0.0",
    "pandas>=1.3.0"
]
